--- a/s1.css
+++ b/s1.css
@@ -25,7 +25,7 @@
 }
 
 body {
-    background: url('bg1.png') no-repeat;
+    background: url('img/bg1.png') no-repeat;
     background-size: cover;
 }
 
