--- a/s2.css
+++ b/s2.css
@@ -25,7 +25,7 @@ html {
 }
 
 body {
-    background: url('bg3-3.jpg') no-repeat;
+    background: url('img/bg3-3.jpg') no-repeat;
     background-size: cover;
 }
 
