--- a/test11.css
+++ b/test11.css
@@ -26,7 +26,7 @@
 }
 
 body {
-    background: url("bg5.jpg") no-repeat;
+    background: url("img/bg5.jpg") no-repeat;
     background-size: cover;
     background-attachment: fixed;
     margin: 0;
