--- a/Styles1.css
+++ b/Styles1.css
@@ -25,7 +25,7 @@
 }
 
 body {
-    background: url('bg1.png') no-repeat;
+    background: url('bg1.webp') no-repeat;
     background-size: cover;
 }
 
